--- a/package.json
+++ b/package.json
@@ -10,22 +10,20 @@
     "start": "astro dev"
   },
   "dependencies": {
-    "@astrojs/vue": "^4.5.0",
-    "@aws-sdk/client-s3": "^3.651.1",
-    "@aws-sdk/s3-request-presigner": "^3.651.1",
-    "imagesloaded": "^5.0.0",
-    "masonry-layout": "^4.2.2",
-    "vue": "^3.5.5",
+    "@astrojs/tailwind": "^5.1.1",
+    "@astrojs/vue": "^4.5.1",
+    "@aws-sdk/client-s3": "^3.654.0",
+    "@aws-sdk/s3-request-presigner": "^3.654.0",
+    "tailwindcss": "^3.4.12",
+    "vue": "^3.5.7",
     "vue-upload-component": "^3.1.17"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.3",
-    "@types/imagesloaded": "^4.1.6",
-    "@types/masonry-layout": "^4.2.8",
     "@types/node": "^20.16.5",
-    "astro": "^4.15.6",
-    "astro-sst": "2.43.5",
-    "sst": "3.1.10",
+    "astro": "^4.15.8",
+    "astro-sst": "^2.43.5",
+    "sst": "^3.1.29",
     "typescript": "^5.6.2"
   }
 }
